# tauri-plugin-screenshots

./: .release-it.ts  Cargo.toml  README.md  build.rs  package.json
dist-js/: index.cjs  index.d.ts  index.js
examples/tauri-app/: package.json  pnpm-lock.yaml
examples/tauri-app/src/: App.tsx
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: index.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: get_monitor_screenshot_base64url.toml  monitor_screenshot.toml  window_screenshot.toml
permissions/schemas/: schema.json
src/: commands.rs  lib.rs
